# yaclip

./: .dockerignore  AGENTS.md  Dockerfile  Dockerfile.CUDA  Makefile  README.md  app.py  build.py  config.yaml.example  pyproject.toml  requirements-cuda.txt  requirements-dev.txt  requirements.txt  yaclip.spec.example
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  HOW-TO-EXTRACT-AND-USE-BROWSER-COOKIES.md  WORKFLOWS.md
src/ai/: api_client.py  heatmap.py  llm_cloud.py  llm_local.py  pipeline.py  prompts.py  stt_cloud.py  stt_local.py
src/core/: config.py  constants.py  environment.py  exceptions.py  logger.py  utils.py  workspace.py
src/interfaces/: cli.py  components.py  utils.py  webui.py
src/interfaces/cli/: __init__.py  app.py
src/interfaces/cli/commands/: cache.py  clip.py  config.py  serve.py
src/interfaces/webui/: __init__.py  app.py
src/interfaces/webui/tabs/: about.py  clipper.py  clipsmanager.py  maintenance.py  review.py  settings.py
src/media/: __init__.py  audio.py  downloader.py  energy.py  ffmpeg_builder.py  renderer.py  slicer.py  subtitles.py
src/vision/: content_type_detector.py  face_tracker.py  frame_utils.py  layout_builder.py  overlay_detector.py  visual_analyzer.py
